--- a/index.html
+++ b/index.html
@@ -175,7 +175,12 @@
         </div>
     
     </div>
-    
+
+    <div class="container">
+        <div class="box-1"></div> 
+           <div class="box-2"><button id="see-more">See more <i class="fa-solid fa-chevron-right"></i> </button>
+          </div> 
+    </div>
 
 </section>
     </main>
