--- a/upcoming.html
+++ b/upcoming.html
@@ -21,7 +21,7 @@
 
             </div>
             <div class="header-image">
-                <img src="./images/assets/banner-img.png" alt="">
+                <img src="./images/assets/Banner Image.png"alt="">
             </div>
         </div>
     </header> 
@@ -127,8 +127,10 @@
             </div>
              
         </div>
-    
     </div>
+
+   
+
 </section>
 </main>
 <!-- -----------foter-------------- -->
